<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nutri.jonas.nutrima.activity.DiarioAlturaDetalheActivity"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone"
        android:id="@+id/idAlturaDetalhetextView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/altura_altura_detalhe_text_view"
        android:id="@+id/alturaAlturaDetalheTextView"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/alturaAlturaDetalheEditText"
        android:hint="@string/altura_altura_detalhe_hint"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/data_altura_detalhe_text_view"
        android:id="@+id/dataAlturaDetalheTextView"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/dataAlturaDetalheEditText"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/observacao_altura_detalhe_text_view"
        android:id="@+id/observacaoAlturaDetalheTextView"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/observacaoAlturaDetalheEditText"
        android:hint="@string/observacao_altura_detalhe_hint" />

</LinearLayout>