<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nutri.jonas.nutrima.activity.DiarioPesoDetalheActivity"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/idPesoDetalheTextView"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/peso_peso_detalhe_text_view"
        android:id="@+id/pesoPesoDetalheTextView"
        android:layout_marginBottom="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/pesoPesoDetalheEditText"
        android:hint="@string/peso_peso_detalhe_hint"
        android:layout_marginBottom="20dp"
        android:contextClickable="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/data_peso_detalhe_text_view"
        android:id="@+id/dataPesoDetalheTextView"
        android:layout_marginBottom="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/dataPesoDetalheEditText"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/observacao_peso_detalhe_text_view"
        android:id="@+id/observacaoPesoDetalheTextView"
        android:layout_marginBottom="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/observacaoPesoDetalheEditText"
        android:hint="@string/observao_peso_detalhe_hint" />
</LinearLayout>
