<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.nutri.jonas.nutrima.activity.DiarioAtividadeDetalheActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/idAtividadeDetalheTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/atividade_atividade_detalhe_text_view"
        android:id="@+id/atividadeAtividadeDetalheTextView"
        android:layout_marginBottom="5dp"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:id="@+id/atividadeAtividadeDetalheSpinner"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/intensidade_atividade_detalhe_text_view"
        android:id="@+id/intensidadeAtividadeDetalheTextView"
        android:layout_marginBottom="5dp"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:id="@+id/intensidadeAtividadeDetalheSpinner"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/data_realizacao_atividade_detalhe_text_view"
        android:id="@+id/dataRealizacaoAtividadeDetalheTextView"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/dataRealizacaoAtividadeDetalheEditText"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/duracao_atividade_detalhe_text_view"
        android:id="@+id/duracaoAtividadeDetalheTextView"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:hint="@string/duracao_atividade_detalhe_hint"
        android:id="@+id/duracaoAtividadeDetalheEditText"
        android:layout_marginBottom="20dp"/>

</LinearLayout>
