<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="3"
    android:layout_margin="30dp"
    tools:context="com.nutri.jonas.nutrima.activity.ModuloActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/refeicaoImageButton"
            android:background="@drawable/refeicao_icon"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/refeicao_icon_text_view"
            android:id="@+id/refeicoesTextView"
            android:textSize="16sp"
            android:layout_marginBottom="40dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="0"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/pratosImageButton"
            android:background="@drawable/pratos_icon"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/pratos_icon_text_view"
            android:id="@+id/pratosTextView"
            android:textSize="16sp"
            android:layout_marginBottom="40dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/diarioPesoImageButton"
            android:background="@drawable/diario_peso_icon"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/diario_peso_icon_text_view"
            android:id="@+id/diarioPesoTextView"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="1"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/diarioAlturaImageButton"
            android:background="@drawable/diario_altura_icon"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/diario_altura_icon_text_view"
            android:id="@+id/diarioAlturaTextView"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/diarioAtividadeImageButton"
            android:background="@drawable/diario_atividade_icon"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/diario_atividade_icon_text_view"
            android:id="@+id/diarioAtividadeTextView"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/graficoEvolucaoImageButton"
            android:background="@drawable/grafico_evolucao_icon"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/grafico_evolucao_icon_text_view"
            android:id="@+id/graficoEvolucaoTextView"
            android:textSize="16sp"/>

    </LinearLayout>

</GridLayout>